--- a/Style.css
+++ b/Style.css
@@ -1,33 +1,53 @@
-html, body {
- margin: 5px;
- padding: 5px;
- border: 0px;
- color: #000;
- background: #fff;
- }
- html, body, p, th, td, li, dd, dt {
- font: 1em Arial, Helvetica, sans-serif;
- }
- h1, h2, h3, h4, h5, h6 {
- font-family: Arial, Helvetica, sans-serif;
- }
- h1 { font-size: 2em; }
- h2 { font-size: 1.5em; }
- h3 { font-size: 1.2em ; }
- h4 { font-size: 1.0em; }
- h5 { font-size: 0.9em; }
- h6 { font-size: 0.8em; }
- a:link { color: #00f; }
- a:visited { color: #009; }
- a:hover { color: #06f; }
- a:active { color: #0cf; }
- 
- body {
-    background-color: powderblue;
+@charset "utf-8";
+/* CSS Document */
+<style type="text/css">
+
+
+.middle {
+	text-align: center;
 }
-h1 {
-    color: blue;
+body,td,th {
+	font-family: Verdana, Geneva, sans-serif;
+	color: #666;
+	font-size: small;
 }
-p {
-    color: red;
+body {
+	background-color: #b0e0e6;
+	margin-left: 0px;
+	margin-top: 0px;
+	margin-right: 0px;
+	margin-bottom: 0px;
+	text-align: left;
 }
+a:link {
+	color: #000;
+	font-weight: bold;
+	text-decoration: none;
+}
+a:visited {
+	text-decoration: none;
+	font-weight: bold;
+	color: #000;
+}
+a:hover {
+	text-decoration: underline;
+	font-weight: bold;
+	color: #900;
+}
+a:active {
+	text-decoration: none;
+	font-weight: bold;
+	color: #900;
+}
+
+
+.loud {
+	font-weight: bold;
+}
+.lefty {
+	text-align: left;
+}
+.middlething {
+	text-align: center;
+}
+
